# alloy_engine

./: .gitignore  MODEL_CARD.md  Makefile  README.md  RELEASE_NOTES.md  conftest.py  pyproject.toml  requirements.txt  state.md
.github/: dependabot.yml
alloy_engine/: __init__.py  config.py  scenarios.py  visualization.py
docs/: ACTIVE_LEARNING.md  BR_CALIBRATION.md  CALIBRATED_PREDICTION.md  CAPABILITY_STATEMENT.md  COMPOSITE_MATERIALS.md  DATA_SOURCING_ASSESSMENT.md  DEPENDENCY_PINNING.md  GA_COMPOSITE_SEARCH.md  HC_SIGMA_FEASIBILITY.md  KNOWN_DEFECTS.md  LITERATURE_CALIBRATION.md  MAGNETOCALORIC_DUALITY.md  MATERIALS_AND_DEVICE_GA.md  MEASUREMENT_PROTOCOL.md  PAPER_DRAFT.md  PAPER_OUTLINE.md  PIPELINE_REPORT.md  RARE_EARTH_EXPANSION.md  README.md  SENSITIVITY_ANALYSIS.md  SESSION_LOG.md  THERMOMAGNETIC_GENERATOR_DESIGN.md  TMG_DESIGN_PLAN.md  arch_research_synthesis.json  fem_magnetics.json  fem_studies.json  flywheel_design.json  flywheel_tmg.step  flywheel_tmg.stl  piston_tmg.step  piston_tmg.stl  sweep_pareto.csv  實驗驗證計畫_簡報.pptx  實驗驗證計畫_詳細需求.docx  熱磁專案_白話入門.pptx  熱磁發電機_研究簡報.pptx  熱磁發電機架構規格_簡報.pptx  熱磁發電機架構規格_詳細.docx
notebooks/: experiment.ipynb
results/: a1_ranking_raw.csv  a1_ranking_test.md  top_alloy_candidates.csv  v3_ga_comparison.md
scripts/: _check_features.py  _check_features2.py  _check_sparse.py  _diag.py  _diag2.py  _dist_check.py  _ga_analysis.py  _sanity.py  active_learning_benchmark.py  analyze_formula_bias.py  bake_real_tc.py  build_mp_magnetization_dataset.py  cad_drawing_flywheel.py  cad_flywheel_tmg.py  cad_piston_tmg.py  calibrated_device_report.py  compare_architectures.py  design_flywheel_tmg.py  make_ppt.py  (+29 more)
(+117 files in other folders)
