[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alloy-engine"
version = "1.0.0"
description = "熱磁能量轉換材料與整機的計算設計、真實資料/文獻校準與不確定度框架"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# 註：>= 為「最低相容版本」下限；可重現安裝請用 hash-pinned lockfile
# （見 docs/DEPENDENCY_PINNING.md 與 requirements.txt）。
dependencies = [
    "torch>=2.8",          # 與 requirements.txt 對齊；<2.6 預設 weights_only=False（F-DEP-01）
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",       # visualization.py 需要（核心 run_search 圖表），修正先前缺漏
]

[project.optional-dependencies]
# 文件/簡報產生（非核心）
docs = ["python-pptx>=1.0", "python-docx>=1.0"]
notebook = ["jupyter"]   # seaborn 已升為核心相依（visualization.py 需要）

[tool.setuptools.packages.find]
include = ["alloy_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
